--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
   ],
   "require": {
     "php": "^8.0",
-    "illuminate/support": "^8.0|^9.0|^10.0",
-    "spatie/laravel-package-tools": "^1.0"
+    "illuminate/support": "^8.0|^9.0|^10.0|^11.0"
   },
   "extra": {
     "laravel": {
