--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
     "php": "^8.0",
     "illuminate/support": "^8.0|^9.0|^10.0|^11.0"
   },
+  "autoload": {
+    "psr-4": {
+      "Unav\\SpxConnect\\": "src/"
+    }
+  },
   "extra": {
     "laravel": {
       "providers": [
