chore: Actualizar la versión a 1.2.0 en composer.json

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "unav/spx-connect",
   "description": "description",
   "minimum-stability": "stable",
+  "version": "1.2.0",
   "license": "proprietary",
   "authors": [
     {
