--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,7 +9,7 @@
           { "type": "feat", "release": "minor" },
           { "type": "fix", "release": "patch" },
           { "type": "perf", "release": "patch" },
-          { "type": "refactor", "release": false },
+          { "type": "refactor", "release": "patch" },
           { "type": "docs", "release": false },
           { "type": "chore", "release": false },
           { "type": "test", "release": false }
